{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 17,
  "lineage": "c4d81073-461f-021c-8e0d-e72c821d5198",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "zot_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.31.223.233",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-17T12:31:57.649-07:00",
            "id": "projects/mumnk8s-202300353/regions/us-central1/addresses/mumnk8s-zot-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "mumnk8s-zot-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mumnk8s-202300353",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/regions/us-central1/addresses/mumnk8s-zot-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "zot_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-17T12:32:17.816-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mumnk8s-202300353/global/firewalls/mumnk8s-zot-allow-http",
            "log_config": [],
            "name": "mumnk8s-zot-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/global/networks/mumnk8s-vpc",
            "priority": 1000,
            "project": "mumnk8s-202300353",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/global/firewalls/mumnk8s-zot-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mumnk8s-zot"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "zot_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-17T12:32:18.578-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mumnk8s-202300353/global/firewalls/mumnk8s-zot-allow-ssh",
            "log_config": [],
            "name": "mumnk8s-zot-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/global/networks/mumnk8s-vpc",
            "priority": 1000,
            "project": "mumnk8s-202300353",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/global/firewalls/mumnk8s-zot-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mumnk8s-zot"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mumnk8s-202300353/global/networks/mumnk8s-vpc",
            "mtu": 0,
            "name": "mumnk8s-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "193749843268547651",
            "project": "mumnk8s-202300353",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/global/networks/mumnk8s-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-17T12:32:18.020-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/mumnk8s-202300353/regions/us-central1/subnetworks/mumnk8s-subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "mumnk8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/global/networks/mumnk8s-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mumnk8s-202300353",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mumnk8s-202300353/regions/us-central1/subnetworks/mumnk8s-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    }
  ]
}